--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container">
         <section class="head">
-                <h2>We Still Dream!!! In Afghanistan, the voice of countless girls seeking education remain silent. Despite their dreams and aspirations, these young minds are often denied the opportunity to learn, leaving them in the shadows of unfulfilled potential. Education is not just a right, but a key to empowerment, and every girl's voice deserves to be heard. The silence surrounding their education is a cry for change that cannot be ignored! For when we lift their voices, we build a brighter future for al</h2>
+                <h2>We Still Dream!!! In Afghanistan, the voice of countless girls seeking education remain silent. Despite their dreams and aspirations, these young minds are often denied the opportunity to learn, leaving them in the shadows of unfulfilled potential. Education is not just a right, but a key to empowerment, and every girl's voice deserves to be heard. The silence surrounding their education is a cry for change that cannot be ignored! For when we lift their voices, we build a brighter future for all.</h2>
         </section>
             <div class="home-image">
                 <img src="https://www.unicef.org/afghanistan/sites/unicef.org.afghanistan/files/styles/hero_extended/public/afg-article-comic-book.JPG.webp?itok=R8C-3xRQ" alt="education">
